--- a/Project_Development_Phase/Sprint-4/templates/home.html
+++ b/Project_Development_Phase/Sprint-4/templates/home.html
@@ -40,7 +40,7 @@
 	</section>
 
 	<div class="last-text">
-		<p>Developed with love by Tahmid Hamim © 2022</p>
+		<p>Developed with Team(PNT2022TMID48800) © 2022</p>
 	</div>
 
 	<!---scroll-top--->
